data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_745.wast
;; 6. **Test Description**: Use a loop to traverse through an array and perform operations on elements only if a `br_if` condition, based on element values, is met. Verify operations are correctly skipped or performed.    - **Constraint**: Ensure `br_if` condition evaluation correctly skips elements not meeting the criteria.    - **Incorrect Condition Evaluation**: This test checks for inappropriate skipping or processing of elements due to incorrect condition evaluations.

(assert_invalid
  (module
    (memory 1)
    (data (i32.const 0) "\04\03\02\01")
    (func $test_loop (result i32)
      (local $i i32) (local $sum i32)
      (loop $loop (result i32)
        (local.set $i (i32.add (local.get $i) (i32.const 1)))
        (i32.load8_s (i32.const 0))
        (local.set $sum (i32.add (local.get $sum) (local.get $i)))
        (br_if $loop (i32.lt_u (local.get $i) (i32.const 4)))
      )
      (local.get $sum)
    )
  )
  "type mismatch"
)